# simple_homing

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/conf/: bigman_config.ini  door_bigman_config.ini  hydra_config.ini  initial_config.ini  initial_config_simulation.ini  robotology_bigman_config.ini  walking_config.ini
config/: initial_config.ini  initial_config_simulation.ini
include/: file_parser.h  homing_cmd_port.hpp  simple_homing.h  simple_homing_constants.h  simple_homing_module.hpp  yarp_interface.h
src/: file_parser.cpp  main.cpp  simple_homing.cpp  yarp_interface.cpp
